<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
        <item
            android:id="@+id/action_settings"
            app:showAsAction="never"
            android:title="@string/menu_nav_settings" />
        <item
            android:id="@+id/action_edit_groups"
            app:showAsAction="never"
            android:title="@string/menu_nav_edit_groups" />
    <item
        android:id="@+id/action_edit_channels"
        app:showAsAction="never"
        android:title="@string/menu_nav_edit_channels" />
        <item
            android:id="@+id/action_exit"
            app:showAsAction="never"
            android:title="@string/menu_nav_exit" />
    <group android:enabled="true"/>
    <item
        android:id="@+id/action_delete_all"
        app:showAsAction="never"
        android:title="@string/menu_nav_delete_all" />

</menu>
